# whisper.Mojo

./: .gitignore  LICENSE  benchmark_python.py  config.mojo  expected_tokens.txt  export_weights.py  guide.md  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  layers.mojo  loader.mojo  main  main.mojo  main.py  pyproject.toml  readme.md  test_max_imports.mojo  test_simd.mojo  tokenizer.mojo  whisper.mojo  whisper_tensor.mojo
